--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name=".lifecycle.ActivityOne"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".ActivityA"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
