--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidPlaygroud"
         tools:targetApi="31">
         <activity
+            android:name=".coroutine.CoroutineActivity"
+            android:exported="false" />
+        <activity
             android:name=".viewmodel.ViewModelActivity"
             android:exported="false" />
         <activity
